HelloUltraviolet/Fixtures/RejectedSource/Expressions/RaceStreamHandlerTypeMismatch/Source/Main.uv
//! Rejected async composition specimen for streaming race handler type mismatch.

public procedure firstAsyncValue() -> Async<i32, (), i32, !> {
    return 1
}

public procedure secondAsyncValue() -> Async<i32, (), i32, !> {
    return 2
}

public procedure raceStreamHandlerTypeMismatchReference() -> Async<i32, (), (), !> {
    let value: Stream<i32, !> = race {
        firstAsyncValue() -> |result| yield result,
        secondAsyncValue() -> |result| yield false,
    }
    return
}
